--- a/menu.html
+++ b/menu.html
@@ -39,47 +39,47 @@
     </header>
 
     <!-- Menu Section -->
-    <main id="menu">
+    <main id = "menu">
         <h2>Our Menu</h2>
 
         <!-- Menu Item 1 -->
         <div class = "menu-item">
-            <img src=".//Photos/adobo.jpg" alt="Adobo">
+            <img src=".//Photos/adobo.jpg" alt="Adobo" class="image">
             <h3>Chicken Adobo</h3>
             <p>Slow-cooked chicken in soy sauce, vinegar, and spices. Served with steamed rice.</p>
         </div>
 
         <!-- Menu Item 2 -->
         <div class = "menu-item">
-            <img src=".//Photos/sinigang.jpg" alt="Sinigang">
+            <img src=".//Photos/sinigang.jpg" alt="Sinigang" class="image">
             <h3>Beef Sinigang</h3>
             <p>Tangy tamarind soup with beef, vegetables, and rice.</p>
         </div>
         
          <!-- Menu Item 3 -->
          <div class = "menu-item">
-            <img src=".//Photos/lechon.jpg" alt="Lechon">
+            <img src=".//Photos/lechon.jpg" alt="Lechon" class="image">
             <h3>Lechon Kawali</h3>
             <p>Lechon Kawali is a popular Filipino pork dish deep-fried to golden perfection. Golden and crunchy on the outside, moist and flavourful on the inside.</p>
         </div>
 
         <!-- Menu Item 4 -->
         <div class = "menu-item">
-            <img src="./Photos/lumpia.jpg" alt="Lumpia">
+            <img src="./Photos/lumpia.jpg" alt="Lumpia" class="image">
             <h3>Filipino Lumpia</h3>
             <p>Lumpia are made with paper-thin lumpia wrappers and filled with a savory mixture of ground pork, cabbage, and other vegetables.</p>
         </div>
 
         <!-- Menu Item 5 -->
         <div class = "menu-item">
-            <img src="./Photos/dinuguan.jpg" alt="Dinuguan">
+            <img src="./Photos/dinuguan.jpg" alt="Dinuguan" class="image">
             <h3>Dinuguan</h3>
             <p>Dinuguan is a Filipino savory stew usually made of pork offal (typically lungs, kidneys, intestines, ears, heart and snout) and/or meat simmered in a rich, spicy dark gravy of pig blood, garlic, chili, and vinegar.</p>
         </div>
         
         <!-- Menu Item 6 -->
         <div class = "menu-item">
-            <img src="./Photos/pinakbet.jpg" alt="Pinakbet">
+            <img src="./Photos/pinakbet.jpg" alt="Pinakbet" class="image">
             <h3>Pinakbet</h3>
             <p>Pinakbet includes a mix of hearty vegetables - eggplant, long green beans, bitter melon, okra, and squash or sweet potato - and your fermented seafood of choice</p>
         </div>
