--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
 <!-- Footer -->
 <footer>
-        <p>&copy; 2023 The Filipino Restaurant</p>
+        <p>The Filipino Restaurant</p>
 </footer>
 
 </html>
