--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Your Restaurant Name</p>
+        <p>The Filipino Restaurant</p>
     </footer>
 
     <section id="contact-form">
