--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 Your Restaurant Name</p>
+        <p>The Filipino Restaurant</p>
     </footer>
 
     <script src = "./script.js"></script>
