--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <strong>
             <p class="welcome-box">Indulge in the rich and diverse flavors of Filipino cuisine at our culinary haven. Immerse yourself in the authentic taste of traditional dishes, carefully crafted to bring the essence of Filipino culture to your dining experience. Each dish tells a story of tradition, family, and the vibrant culinary heritage of the Philippines.</p>
         </strong>
-        <img src="./Photos/filipino-cuisine.jpg" alt="Filipino Cuisine" class="characters">
+        <img src="./Photos/Philippines.jpg" alt="Filipino Cuisine" class="characters">
     
         <h2>Upcoming Specials</h2>
         <table>
