--- a/about.html
+++ b/about.html
@@ -41,7 +41,6 @@
     <!-- About Us Section -->
     <main id="about">
         <div class="intro-section">
-            <img src="Photos/Peenoise.jpg" alt="Restaurant Photo">
             <h1 class="restaurant-name">The Filipino Restaurant</h1>
         </div>
 
@@ -56,8 +55,9 @@
 
         </div>
 
+        <div> <img src="Photos/Peenoise.jpg" alt="Restaurant Photo"> </div>
+
     </main>
-<!-- add T.H.U.G section -->
 
 <script src = "./script.js"></script>
     
