--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 
         </div>
 
-        <div> <img src="Photos/Peenoise.jpg" alt="Restaurant Photo"> </div>
+        <div> <img src="Photos/Peenoise.jpg" alt="Restaurant Photo" class="pinoy"> </div>
 
     </main>
 
