--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
             <!-- Add a contact form or map if desired -->
             <div id="map">
-                <img src="./Photos/iloilo.jpg" alt="Map Image">
+                <img src="./Photos/iloilo.jpg" alt="Map Image" class="map">
             </div>
 
         </div>
