--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A Restaurant Website.">
     <title>Filipino Culinary Haven</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- add seo tags -->
 </head>
 
 <body>
