--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Filipino Restaurant - About Us</title>
+
+    <meta name="description" content="Welcome to The Filipino Restaurant - a culinary haven for authentic Filipino flavors. Explore our menu, learn about our story, and visit us today.">
+    <meta name="keywords" content="Filipino restaurant, Filipino cuisine, Filipino flavors, Filipino food, authentic Filipino dishes">
+    <meta name="author" content="Seanne Oriemo">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
