--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filipino Culinary Haven - Contact Us</title>
+
+    <meta name="description" content="Welcome to The Filipino Restaurant - a culinary haven for authentic Filipino flavors. Explore our menu, learn about our story, and visit us today.">
+    <meta name="keywords" content="Filipino restaurant, Filipino cuisine, Filipino flavors, Filipino food, authentic Filipino dishes">
+    <meta name="author" content="Seanne Oriemo">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -48,7 +53,6 @@
             <p><strong>Email:</strong> namit@gmail.com </p>
             <p><strong>Phone:</strong> 0911</p>
 
-            <!-- Add a contact form or map if desired -->
             <div id="map">
                 <img src="./Photos/iloilo.jpg" alt="Map Image" class="map">
             </div>
