--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A Restaurant Website.">
     <title>Filipino Culinary Haven</title>
+
+    <meta name="description" content="Welcome to The Filipino Restaurant - a culinary haven for authentic Filipino flavors. Explore our menu, learn about our story, and visit us today.">
+    <meta name="keywords" content="Filipino restaurant, Filipino cuisine, Filipino flavors, Filipino food, authentic Filipino dishes">
+    <meta name="author" content="Seanne Oriemo">
+
     <link rel="stylesheet" href="styles.css">
-    <!-- add seo tags -->
+    
 </head>
 
 <body>
